--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -214,7 +214,7 @@
       </div>
     </div>
     <ng-container *ngIf="associatedBotsExist">
-      <p class="bold-informative-text">Choose any bot from the list to link it to your Findly app</p>
+      <p class="bold-informative-text">Choose any bot from the list to link it to your SearchAssist app</p>
       <div class="search-input-container">
         <input class="search-input" type="text" placeholder="Search" [(ngModel)]="searchAssociatedBots"
           name="searchAssociatedBots" />
