StructuredData Enhancements tooltip changes.

--- a/findly-builder/src/app/components/structured-data/structured-data.component.html
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.html
@@ -143,8 +143,8 @@
                                     <div class="info-link">
                                         <img src="assets/icons/info.svg">
                                         <span class="tooltiptext">
-                                            <div class="">Updated by : Sreenivas Karthikeyan</div>
-                                            <div class="">Last Updated On :  28 Jul 2020</div>
+                                            <div class="">{{'structuredData.updated_by' | translate}} : {{data.modUserDetails.fullName}}</div>
+                                            <div class="">{{'structuredData.updated_on' | translate}} :  {{data.lMod | dateFormatPipe: 'DD-MMM-YYYY'}}</div>
                                         </span>
                                     </div>                                   
                                     <!-- Commented for now -->
