FLY-1326 (Fileds Scroll)

--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -493,3 +493,8 @@
 .children-expanded{
     padding: 10px 15px;
 }
+
+.dropdown-menu.content-menu .scroll-search-field{
+    height: 300px;
+    max-height: 300px;
+}
