--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="variants-block right">
                       <span *ngFor="let vari of exp.variants; let index = index">
-                        <span *ngIf="exp.top_leader === vari.code">
+                        <span *ngIf="exp.top_leader === vari.code &&exp.state !== 'configured'">
                         <span class="v-name status" [style.background-color]="vari.color">{{ exp.top_leader }}</span>
                         <span class="winner" *ngIf="vari.leader"><img src="assets/icons/experiment/leader.svg" alt="leader"></span>
                         <span class="winner" *ngIf="vari.winner">Winner</span></span>
@@ -92,7 +92,7 @@
                       </span>
                     </div>
                   </div> -->
-                  <div class="col-2 status" *ngIf="exp.state !== 'configured'">
+                  <div class="col-2 status">
                     <span class="a-status" [ngClass]="exp.state">{{
                       exp.state | titlecase
                       }}</span>
