--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -42,7 +42,7 @@
           <div class="kr-sg-radiobutton">
             <input id="buttonIdSynonyms" value="synonym" name="synonymType" class="radio-custom"
               [(ngModel)]="newSynonymObj.type" type="radio">
-            <label for="buttonIdSynonyms" class="radio-custom-label">{{'synonyms.synonyms'| translate}}</label>
+            <label for="buttonIdSynonyms" class="radio-custom-label">{{'synonyms.synonym'| translate}}</label>
           </div>
           <div class="kr-sg-radiobutton">
             <input id="buttonIdOneWaySynonyms" value="oneWaySynonym" name="synonymType" [(ngModel)]="newSynonymObj.type"
@@ -170,7 +170,7 @@
                           <input id="buttonIdSynonyms" value="synonym" name="synonymType" class="radio-custom"
                             [(ngModel)]="synonym.type" [checked]="!synonym.keyword" type="radio">
                           <label for="buttonIdSynonyms"
-                            class="radio-custom-label">{{'synonyms.synonyms'| translate}}</label>
+                            class="radio-custom-label">{{'synonyms.synonym'| translate}}</label>
                         </div>
                         <div class="kr-sg-radiobutton">
                           <input id="buttonIdOneWaySynonyms" value="oneWaySynonym" name="synonymType"
