--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -91,10 +91,10 @@
                                     <!-- <div class="col-2 title">1000</div>  -->
                                     <div class="col-2 title">
                                         <span class="count">{{result.count}}</span>
-                                        <div class="view-query">
-                                            <!-- <img src="assets/icons/view-query.svg">     -->
-                                            <span>{{result.count}}</span>
-                                        </div>
+                                        <!-- <div class="view-query">
+                                            <img src="assets/icons/view-query.svg">    
+                                            <span>View Results</span>
+                                        </div> -->
                                     </div>
                                 </div>
 
