--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
@@ -71,6 +71,7 @@
                 font-weight: normal;
                 font-size: 14px;
                 line-height: 20px;
+                flex : auto;
             }
             .indent{
                 cursor: pointer;
