--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -1119,6 +1119,23 @@
                 </div>
               </div>              
             </div>
+
+            <div class="result-right-sec" *ngIf="customizeTemplateObj.template.searchResultlayout.layout == 'tileWithHeader' && customizeTemplateObj.template.type == 'Carousel'">
+              <div class="carousel" id="carousel-default">
+                <div class="slide tile_with_header grid_view_template">
+                  <a class="tile-title">Check account statement</a>
+                </div>
+                <div class="slide tile_with_header grid_view_template">
+                  <a class="tile-title">Speak to an agent</a>
+                </div>
+                <div class="slide tile_with_header grid_view_template">
+                  <a class="tile-title">Check credit card eligibility</a>
+                </div>
+                <div class="slide tile_with_header grid_view_template">
+                  <a class="tile-title">Last 30 days transaction</a>    
+                </div>
+              </div>              
+            </div>
             
           <!-- Tile with Header End -->
           </div>
